--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "[libraryName]",
+  "name": "use-input-formatted",
   "version": "0.0.0",
   "description": "",
   "cdn": "dist/index.umd.js",
@@ -31,7 +31,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/[repositoryOwner]/[repositoryName].git"
+    "url": "git+https://github.com/VitorLuizC/use-input-formatted.git"
   },
   "keywords": [
     "typescript",
@@ -39,11 +39,13 @@
     "library"
   ],
   "author": {
-    "name": "[authorFullName]"
+    "url": "https://vitorluizc.github.io",
+    "name": "Vitor Luiz Cavalcanti",
+    "email": "vitorluizc@outlook.com"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/[repositoryOwner]/[repositoryName]/issues"
+    "url": "https://github.com/VitorLuizC/use-input-formatted/issues"
   },
-  "homepage": "https://github.com/[repositoryOwner]/[repositoryName]#readme"
+  "homepage": "https://github.com/VitorLuizC/use-input-formatted#readme"
 }
